test/expected/declare_o_plus2_d_rk.out
declare ++ as operator (double) returning reference to S
        ^
9: error: at least 1 parameter of a non-member operator must be an enum, class, struct, or union; or a reference or rvalue reference thereto
